LP#1402797 Make the save box smaller to help avoid overlapping the input form

--- a/Open-ILS/web/css/skin/default/register.css
+++ b/Open-ILS/web/css/skin/default/register.css
@@ -12,7 +12,7 @@
     position: fixed;
     top:40px;
     right:30px;
-    width:300px;
+    width:200px;
     border:2px solid #d9e8f9;
     -moz-border-radius: 10px;
     font-weight: bold;
